[metadata]
name = webpage_listener
version = 2015.1
summary = .
description-file =
    README.md


[files]
packages =
    webpage_listener

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[entry_points]
console_scripts =
    start-listener = webpage_listener.cmd.start_listener:run

[wheel]
universal = 1

[nosetests]
cover-branches = true
cover-erase = true
cover-inclusive = true
#cover-min-percentage = 100
cover-package = poppy
#match = ^test
where = tests
with-coverage = true
verbosity=2

